--- a/deploy/index.html
+++ b/deploy/index.html
@@ -115,12 +115,14 @@
                       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 72 72" id="spiral-animation">
                         <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                           <g id="Artboard" transform="translate(-5 -7)">
-                            <circle id="circle" stroke="#FFE103" stroke-width="3" cx="41" cy="43" r="34.5"/>
-                            <path class="arrow" id="arrow-line" stroke="#fff" d="M40.5 34v22"/>
-                            <path class="arrow" id="right-arrow" stroke="#fff" transform="matrix(-1 0 0 1 86 0)" d="M46 34l-6 6"/>
-                            <path class="arrow" id="left-arrow" stroke="#fff" d="M41 34l-6 6"/>
-                            <path d="M48.463 69.698c-21.653 1.544-27.49-6.286-35.102-21.24C7.528 37 17.111 17.467 29.226 14.98c8.322-1.708 11.885-1.856 20.342-1.27 13.638.948 23.223 24.517 21.444 34.748-4.697 27.016-33.846 29.006-49.224 18.464C-6.4 47.6 31.253-2.06 55.62 20.14c24.337 22.174 4.54 61.112-24.925 41.281-30.072-20.239.976-49.113 18.873-36.96 17.095 11.608 12.103 41.7-11.262 37.761-13.243-2.232-19.12-29.67-1.378-32.89 12.64-2.294 21.049 16.158 14.08 24.774-9.633 11.909-28.151-8.58-16.008-16.48 7.928-5.158 12.661 7.997 10.2 14.667-1.419 3.85-14.262-6.646-9.01-9.607 5.742-3.238 10.943 8.21 2.219 2.39" id="spiral" stroke="#FFE103" stroke-width="8"/>
-                            <path id="check" stroke="#000" d="M30 42.972L41.118 54 52 32"/>
+                            <circle class="done" id="circle" stroke="#FFE103" stroke-width="3" cx="41" cy="43" r="34.5"/>
+                            <g id="arrow">
+                              <path class="arrow" id="arrow-line" stroke="#fff" stroke-width="3.05" d="M40.5 34v22"/>
+                              <path class="arrow" id="right-arrow" stroke="#fff" stroke-width="3.05" transform="matrix(-1 0 0 1 86 0)" d="M46 34l-6 6"/>
+                              <path class="arrow" id="left-arrow" stroke="#fff" stroke-width="3.05" d="M41 34l-6 6"/>
+                            </g>
+                            <path class="done" d="M48.463 69.698c-21.653 1.544-27.49-6.286-35.102-21.24C7.528 37 17.111 17.467 29.226 14.98c8.322-1.708 11.885-1.856 20.342-1.27 13.638.948 23.223 24.517 21.444 34.748-4.697 27.016-33.846 29.006-49.224 18.464C-6.4 47.6 31.253-2.06 55.62 20.14c24.337 22.174 4.54 61.112-24.925 41.281-30.072-20.239.976-49.113 18.873-36.96 17.095 11.608 12.103 41.7-11.262 37.761-13.243-2.232-19.12-29.67-1.378-32.89 12.64-2.294 21.049 16.158 14.08 24.774-9.633 11.909-28.151-8.58-16.008-16.48 7.928-5.158 12.661 7.997 10.2 14.667-1.419 3.85-14.262-6.646-9.01-9.607 5.742-3.238 10.943 8.21 2.219 2.39" id="spiral" stroke="#FFE103" stroke-width="8"/>
+                            <path id="check" stroke="#fff" stroke-width="3.05" d="M30 42.972L41.118 54 52 32"/>
                           </g>
                         </g>
                       </svg>
